--- a/angular.json
+++ b/angular.json
@@ -33,11 +33,15 @@
             ],
             "styles": [
               "node_modules/bootstrap/dist/css/bootstrap.min.css",
-              "node_modules/ngx-owl-carousel-o/lib/styles/prebuilt-themes/owl.carousel.min.css",
-              "node_modules/ngx-owl-carousel-o/lib/styles/prebuilt-themes/owl.theme.default.min.css",
+              "node_modules/owl.carousel2/dist/assets/owl.carousel.min.css",
+              "node_modules/owl.carousel2/dist/assets/owl.theme.default.min.css",
               "src/styles.css"
             ],
-            "scripts": []
+            "scripts": [
+              "node_modules/jquery/dist/jquery.min.js",
+              "node_modules/owl.carousel2/dist/owl.carousel.min.js",
+              "src/assets/js/owlConfig.js"
+            ]
           },
           "configurations": {
             "production": {
