--- a/package.json
+++ b/package.json
@@ -18,12 +18,16 @@
     "@angular/platform-browser": "~12.1.1",
     "@angular/platform-browser-dynamic": "~12.1.1",
     "@angular/router": "~12.1.1",
+    "@fortawesome/fontawesome-free": "^5.15.3",
     "@fortawesome/fontawesome-svg-core": "^1.2.35",
     "@fortawesome/free-solid-svg-icons": "^5.15.3",
     "@ionic/angular": "^5.6.12",
     "bootstrap": "^4.6.0",
     "ionicons": "^5.5.2",
+    "jquery": "^3.6.0",
     "ngx-owl-carousel-o": "^6.0.0",
+    "owl.carousel": "^2.3.4",
+    "owl.carousel2": "^2.2.2",
     "rxjs": "~6.6.0",
     "tslib": "^2.2.0",
     "zone.js": "~0.11.4"
@@ -32,7 +36,9 @@
     "@angular-devkit/build-angular": "~12.1.1",
     "@angular/cli": "~12.1.1",
     "@angular/compiler-cli": "~12.1.1",
+    "@ionic/angular-toolkit": "latest",
     "@types/jasmine": "~3.6.0",
+    "@types/jquery": "^3.5.6",
     "@types/node": "^12.11.1",
     "jasmine-core": "~3.7.0",
     "karma": "~6.3.0",
@@ -40,7 +46,6 @@
     "karma-coverage": "~2.0.3",
     "karma-jasmine": "~4.0.0",
     "karma-jasmine-html-reporter": "^1.5.0",
-    "typescript": "~4.3.2",
-    "@ionic/angular-toolkit": "latest"
+    "typescript": "~4.3.2"
   }
 }
