--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@fortawesome/fontawesome-svg-core": "^1.2.35",
     "@fortawesome/free-solid-svg-icons": "^5.15.3",
     "@ionic/angular": "^5.6.12",
+    "angular2-cookie": "^1.2.6",
     "bootstrap": "^4.6.0",
     "ionicons": "^5.5.2",
     "jquery": "^3.6.0",
