--- a/angular.json
+++ b/angular.json
@@ -35,6 +35,7 @@
               "node_modules/bootstrap/dist/css/bootstrap.min.css",
               "node_modules/owl.carousel2/dist/assets/owl.carousel.min.css",
               "node_modules/owl.carousel2/dist/assets/owl.theme.default.min.css",
+              "src/assets/js/jquery-ui.min.js",
               "src/styles.css"
             ],
             "scripts": [
