--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "bootstrap": "^4.6.0",
     "ionicons": "^5.5.2",
     "jquery": "^3.6.0",
+    "jquery-ui": "^1.12.1",
     "ngx-owl-carousel-o": "^6.0.0",
     "owl.carousel": "^2.3.4",
     "owl.carousel2": "^2.2.2",
