--- a/angular.json
+++ b/angular.json
@@ -41,7 +41,8 @@
             "scripts": [
               "node_modules/jquery/dist/jquery.min.js",
               "node_modules/owl.carousel2/dist/owl.carousel.min.js",
-              "src/assets/js/owlConfig.js"
+              "src/assets/js/owlConfig.js",
+              "src/assets/js/404.js"
             ]
           },
           "configurations": {
