--- a/angular.json
+++ b/angular.json
@@ -42,7 +42,9 @@
               "node_modules/jquery/dist/jquery.min.js",
               "node_modules/owl.carousel2/dist/owl.carousel.min.js",
               "src/assets/js/owlConfig.js",
-              "src/assets/js/404.js"
+              "src/assets/js/404.js",
+              "./node_modules/wavesurfer.js/dist/wavesurfer.js"
+
             ]
           },
           "configurations": {
