--- a/package.json
+++ b/package.json
@@ -27,11 +27,13 @@
     "ionicons": "^5.5.2",
     "jquery": "^3.6.0",
     "jquery-ui": "^1.12.1",
+    "ng-waveform": "^0.2.1",
     "ngx-owl-carousel-o": "^6.0.0",
     "owl.carousel": "^2.3.4",
     "owl.carousel2": "^2.2.2",
     "rxjs": "~6.6.0",
     "tslib": "^2.2.0",
+    "wavesurfer.js": "^5.1.0",
     "zone.js": "~0.11.4"
   },
   "devDependencies": {
