--- a/angular.json
+++ b/angular.json
@@ -1,5 +1,8 @@
 {
   "$schema": "./node_modules/@angular/cli/lib/config/schema.json",
+  "cli": {
+    "analytics": "17651b66-c41a-4d81-b55f-2ae9178623a6"
+  },
   "version": 1,
   "newProjectRoot": "projects",
   "projects": {
